added preprocess substep

--- a/config.json
+++ b/config.json
@@ -102,7 +102,14 @@
                 "split": 0.8,
                 "seed": 42,
                 "strategy": "lesion_slices",
-                "super_scale": 1
+                "super_scale": 1,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "unet",
@@ -137,7 +144,14 @@
                 "split": 0.8,
                 "seed": 42,
                 "strategy": "lesion_slices",
-                "super_scale": 2
+                "super_scale": 2,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "unet",
@@ -172,7 +186,14 @@
                 "split": 0.8,
                 "seed": 42,
                 "strategy": "lesion_slices",
-                "super_scale": 1
+                "super_scale": 1,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "yolo",
@@ -207,7 +228,14 @@
                 "split": 0.8,
                 "seed": 42,
                 "super_scale": 2,
-                "strategy": "lesion_slices"
+                "strategy": "lesion_slices",
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "yolo",
@@ -244,7 +272,14 @@
                 "block_size": 5,
                 "strategy": "lesion_block",
                 "threshold": 0,
-                "super_scale": 1
+                "super_scale": 1,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "unet",
@@ -281,7 +316,14 @@
                 "block_size": 5,
                 "strategy": "lesion_block",
                 "threshold": 0,
-                "super_scale": 2
+                "super_scale": 2,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "unet",
@@ -318,7 +360,14 @@
                 "block_size": 5,
                 "strategy": "lesion_block",
                 "threshold": 0,
-                "super_scale": 1
+                "super_scale": 1,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "yolo",
@@ -355,7 +404,14 @@
                 "block_size": 5,
                 "strategy": "lesion_block",
                 "threshold": 0,
-                "super_scale": 2
+                "super_scale": 2,
+                "kfold": {
+                    "enable": true,
+                    "n_splits": 5,
+                    "seed": 42,
+                    "mini_val_frac": 0.10,
+                    "link_mode": "hardlink"
+                }
             },
             "train": {
                 "net": "yolo",
