--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
             "preprocess": {
                 "net": "unet",
                 "src_path": "datasets/MSLesSeg-Dataset",
-                "dst_path": "datasets/unet_all_test",
+                "dst_path": "datasets/unet_all",
                 "resize": [320, 320],
                 "split": 0.8,
                 "seed": 42,
@@ -21,7 +21,7 @@
             },
             "train": {
                 "net": "unet",
-                "src_path": "datasets/unet_all_test",
+                "src_path": "datasets/unet_all",
                 "dst_path": "results/unet/unet_all_kfolds_test",
                 "batch_size": 16,
                 "use_kfold": true,
@@ -55,7 +55,7 @@
             "preprocess": {
                 "net": "yolo",
                 "src_path": "datasets/MSLesSeg-Dataset",
-                "dst_path": "datasets/yolo_all_test",
+                "dst_path": "datasets/yolo_all",
                 "resize": [320, 320],
                 "split": 0.8,
                 "seed": 42,
@@ -71,8 +71,8 @@
             },
             "train": {
                 "net": "yolo",
-                "src_path": "datasets/yolo_all_test",
-                "dst_path": "results/yolo/yolo_all_kfolds_test",
+                "src_path": "datasets/yolo_all",
+                "dst_path": "results/yolo/yolo_all_kfolds",
                 "use_kfold": true,
                 "batch_size": 16,
                 "epochs": 1,
